--- a/styles.css
+++ b/styles.css
@@ -2,5 +2,35 @@
    margin: 0;
    padding: 0;
    box-sizing: border-box;
+   font-family: "Open Sans", sans-serif;
  }
 
+body {
+  height: 100vh;
+  background: #000;
+  background-image: url("https://images.unsplash.com/photo-1670901391503-f6a80a0d91a6?q=80&w=1031&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+  background-size: cover;
+  background-position: center;
+}
+
+.navbar li {
+  list-style: none;
+}
+
+.navbar a {
+  text-decoration: none;
+  color: yellow;
+  font-size: 1.1rem;
+}
+
+.logo {
+  
+}
+
+.links {
+  
+}
+
+.container {
+  
+}
