--- a/styles.css
+++ b/styles.css
@@ -19,8 +19,13 @@ body {
 
 .navbar a {
   text-decoration: none;
-  color: yellow;
+  color: black;
   font-size: 1.1rem;
+}
+
+.navbar a:hover {
+  color: yellow;
+  font-size: 1.5rem;
 }
 
 .logo {
