--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@ body {
 
 .navbar li {
   list-style: none;
+  list-st
 }
 
 .navbar a {
@@ -25,9 +26,34 @@ body {
 
 .navbar a:hover {
   color: yellow;
-  font-size: 1.5rem;
+  font-size: 1.3rem;
 }
 
+header{
+  position: relative;
+  padding: 0 2rem;
+}
+
+.navbar .links {
+  display: flex;
+  gap: 1.5rem;
+}
+
+.navbar .logo a{
+  padding-left: 20px;
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.navbar {
+  width: 100%;
+  height: 60px;
+  max-width: 95%;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
 .logo {
   
 }
@@ -37,5 +63,12 @@ body {
 }
 
 .container {
+  /* filter: blur(5px) brightness(0.5); */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.parent {
   
 }
