--- a/styles.css
+++ b/styles.css
@@ -15,13 +15,13 @@ body {
 
 .navbar li {
   list-style: none;
-  list-st
 }
 
 .navbar a {
   text-decoration: none;
-  color: black;
+  color: white;
   font-size: 1.1rem;
+  transition: all 300ms ease;
 }
 
 .navbar a:hover {
@@ -47,7 +47,7 @@ header{
 
 .navbar {
   width: 100%;
-  height: 60px;
+  height: 80px;
   max-width: 95%;
   margin: 0 auto;
   display: flex;
@@ -59,7 +59,20 @@ header{
 }
 
 .links {
-  
+  width: 100%;
+  max-width: 400px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.action_btn{
+  border-radius: 20px;
+  width: 100px;
+  height: 40px;
+  margin: 12px 6px;
+  background-color: black;
+  border: none;
 }
 
 .container {
